package Ch02.Sec09

interface EggLayable {
    fun layEgg()
}
