package Ch02.Sec09

interface Flyable {
    fun fly()
}
