package Ch02.Sec09

interface Tweetable {
    fun tweet()
}
